sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:15: error: illegal start of simple expression
  }
  ^AlgCocktailSort1:16: error: 'while' expected but '}' found.
} 
^