sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
  do{
    var res1 : Int = 0
    var res2 : Int = 0
    for (i<- 0 to getnombreValeurs() - 2) {
      if (plusPetit(i+1,i)) { echange(i,i+1)
                            res1=res1+1}
    for (i<- getnombreValeurs() - 2 to 0) {
   	  if (plusPetit(i+1,i)) { echange(i,i+1)
                            res2=res2+1}
    } }
    while (res1!=0 || res2!=0)
    
  }
}